// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow render 1`] = `
<div
  className="border_box FOO_WRAPPER_CLASS_NAME"
>
  <div
    className="FOO_CONTENT_CLASS_NAME"
  >
    <p
      className="layout-align-start-center flex-100 layout-row title_grey"
    >
      FOO_TITLE
    </p>
    <div>
      FOO_CONTENT
    </div>
  </div>
</div>
`;

exports[`title is falsy 1`] = `
<div
  className="border_box FOO_WRAPPER_CLASS_NAME"
>
  <div
    className="FOO_CONTENT_CLASS_NAME"
  >
    <div>
      FOO_CONTENT
    </div>
  </div>
</div>
`;
